fix: Project titles *still* not aligning properly

--- a/src/niall-paterson/partials/_layout.scss
+++ b/src/niall-paterson/partials/_layout.scss
@@ -1,7 +1,8 @@
-h1, h2, p, #languages-icon-wrapper {
+h1, p, #languages-icon-wrapper {
   display: inline-block;
   margin: $small-margin;
 }
+
 
 #about-content p, .project-wrapper p {
   margin-top: 0;
@@ -101,7 +102,6 @@ main {
 }
 
 article {
-  @include flex-column-center;
   height: auto;
   margin: 20vh $small-margin;
   border: 1px solid transparent;
@@ -112,10 +112,6 @@ article {
     border: 1px solid transparent;
     border-radius: 25px;
     width: 100%;
-  }
-
-  h2 {
-    align-self: flex-start;
   }
 
   .project-links {
